# Visual-Studio-Code

./: CMakeLists.txt  README.md  add_cuda  calculator  calculator.cpp  calculator_1  calculator_1.cpp  calculator_1.cpp.txt  cudacpp.1.cu  cudacpp.cpp  cudacpp.cpp.cpp  prime  prime.cpp
Calculator/: CMakeLists.txt  main.cpp
Calculator_1/: CMakeLists.txt  main.cpp
Cmd_Line_Args/: CMakeLists.txt  main.cpp
Cuda_cpp/: CMakeLists.txt  main.cpp
Cuda_cpp/cuda/: CMakeLists.txt  cudacpp.cu
PrimeNumberCheck/: CMakeLists.txt  main.cpp
Prime_Number/: CMakeLists.txt  main.cpp
