cmake_minimum_required(VERSION 3.13)
project(Visual_Studio_Code)

set(CMAKE_CXX_STANDARD 14)

add_executable(Visual_Studio_Code
        .idea/encodings.xml
        .idea/misc.xml
        .idea/modules.xml
        .idea/vcs.xml
        .idea/Visual-Studio-Code.iml
        .idea/workspace.xml
        .vscode/c_cpp_properties.json
        .vscode/launch.json
        .vscode/settings.json
        .vscode/tasks.json
        Calculator/.idea/Calculator.iml
        Calculator/.idea/encodings.xml
        Calculator/.idea/misc.xml
        Calculator/.idea/modules.xml
        Calculator/.idea/vcs.xml
        Calculator/.idea/workspace.xml
        Calculator/.vscode/c_cpp_properties.json
        Calculator/.vscode/launch.json
        Calculator/.vscode/settings.json
        Calculator/.vscode/tasks.json
        Calculator/cmake-build-debug/Calculator.cbp
        Calculator/cmake-build-debug/Calculator.exe
        Calculator/cmake-build-debug/cmake_install.cmake
        Calculator/cmake-build-debug/CMakeCache.txt
        Calculator/cmake-build-debug/Makefile
        Calculator/CMakeLists.txt
        Calculator/main.cpp
        Calculator_1/.idea/Calculator_1.iml
        Calculator_1/.idea/encodings.xml
        Calculator_1/.idea/misc.xml
        Calculator_1/.idea/modules.xml
        Calculator_1/.idea/vcs.xml
        Calculator_1/.idea/workspace.xml
        Calculator_1/.vscode/c_cpp_properties.json
        Calculator_1/.vscode/launch.json
        Calculator_1/.vscode/settings.json
        Calculator_1/.vscode/tasks.json
        Calculator_1/cmake-build-debug/Calculator_1.cbp
        Calculator_1/cmake-build-debug/Calculator_1.exe
        Calculator_1/cmake-build-debug/cmake_install.cmake
        Calculator_1/cmake-build-debug/CMakeCache.txt
        Calculator_1/cmake-build-debug/Makefile
        Calculator_1/CMakeLists.txt
        Calculator_1/main.cpp
        Cmd_Line_Args/.idea/Cmd_Line_Args.iml
        Cmd_Line_Args/.idea/encodings.xml
        Cmd_Line_Args/.idea/misc.xml
        Cmd_Line_Args/.idea/modules.xml
        Cmd_Line_Args/.idea/vcs.xml
        Cmd_Line_Args/.idea/workspace.xml
        Cmd_Line_Args/cmake-build-debug/cmake_install.cmake
        Cmd_Line_Args/cmake-build-debug/CMakeCache.txt
        Cmd_Line_Args/cmake-build-debug/Cmd_Line_Args.cbp
        Cmd_Line_Args/cmake-build-debug/Cmd_Line_Args.exe
        Cmd_Line_Args/cmake-build-debug/Makefile
        Cmd_Line_Args/CMakeLists.txt
        Cmd_Line_Args/main.cpp
        Cuda_cpp/.idea/Cuda_cpp.iml
        Cuda_cpp/.idea/encodings.xml
        Cuda_cpp/.idea/misc.xml
        Cuda_cpp/.idea/modules.xml
        Cuda_cpp/.idea/vcs.xml
        Cuda_cpp/.idea/workspace.xml
        Cuda_cpp/.vscode/c_cpp_properties.json
        Cuda_cpp/.vscode/launch.json
        Cuda_cpp/.vscode/settings.json
        Cuda_cpp/.vscode/tasks.json
        Cuda_cpp/cmake-build-debug/cmake_install.cmake
        Cuda_cpp/cmake-build-debug/CMakeCache.txt
        Cuda_cpp/cmake-build-debug/Cuda_cpp.cbp
        Cuda_cpp/cmake-build-debug/Cuda_cpp.exe
        Cuda_cpp/cmake-build-debug/Makefile
        Cuda_cpp/cuda/.idea/cuda.iml
        Cuda_cpp/cuda/.idea/encodings.xml
        Cuda_cpp/cuda/.idea/misc.xml
        Cuda_cpp/cuda/.idea/modules.xml
        Cuda_cpp/cuda/.idea/vcs.xml
        Cuda_cpp/cuda/.idea/workspace.xml
        Cuda_cpp/cuda/cmake-build-debug/cmake_install.cmake
        Cuda_cpp/cuda/cmake-build-debug/CMakeCache.txt
        Cuda_cpp/cuda/cmake-build-debug/cuda.cbp
        Cuda_cpp/cuda/cmake-build-debug/Makefile
        Cuda_cpp/cuda/CMakeLists.txt
        Cuda_cpp/cuda/cudacpp.cu
        Cuda_cpp/CMakeLists.txt
        Cuda_cpp/main.cpp
        Prime_Number/.idea/dictionaries/ankan.xml
        Prime_Number/.idea/encodings.xml
        Prime_Number/.idea/misc.xml
        Prime_Number/.idea/modules.xml
        Prime_Number/.idea/Prime_Number.iml
        Prime_Number/.idea/vcs.xml
        Prime_Number/.idea/workspace.xml
        Prime_Number/.vscode/c_cpp_properties.json
        Prime_Number/.vscode/launch.json
        Prime_Number/.vscode/settings.json
        Prime_Number/.vscode/tasks.json
        Prime_Number/cmake-build-debug/cmake_install.cmake
        Prime_Number/cmake-build-debug/CMakeCache.txt
        Prime_Number/cmake-build-debug/Makefile
        Prime_Number/cmake-build-debug/Prime_Number.cbp
        Prime_Number/cmake-build-debug/Prime_Number.exe
        Prime_Number/CMakeLists.txt
        Prime_Number/main.cpp
        PrimeNumberCheck/.idea/encodings.xml
        PrimeNumberCheck/.idea/misc.xml
        PrimeNumberCheck/.idea/modules.xml
        PrimeNumberCheck/.idea/PrimeNumberCheck.iml
        PrimeNumberCheck/.idea/vcs.xml
        PrimeNumberCheck/.idea/workspace.xml
        PrimeNumberCheck/cmake-build-debug/cmake_install.cmake
        PrimeNumberCheck/cmake-build-debug/CMakeCache.txt
        PrimeNumberCheck/cmake-build-debug/Makefile
        PrimeNumberCheck/cmake-build-debug/PrimeNumberCheck.cbp
        PrimeNumberCheck/cmake-build-debug/PrimeNumberCheck.exe
        PrimeNumberCheck/CMakeLists.txt
        PrimeNumberCheck/main.cpp
        README.md)
